# Learning-Graphics

./: CMakeLists.txt  README.md
TestProject/: CMakeLists.txt
TestProject/include/glad/: glad.h
TestProject/src/: glad.c  main.cpp
include/: shaderprog.h
shaders/: fs-yellow.glsl  vs.glsl
src/: main.cpp  shaderprog.cpp
